--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,26 @@
     <artifactId>com.nextBaseCRM_Group30</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+<dependencies>
+
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>3.141.59</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+    <dependency>
+        <groupId>io.github.bonigarcia</groupId>
+        <artifactId>webdrivermanager</artifactId>
+        <version>4.2.2</version>
+    </dependency>
+
+
+
+</dependencies>
+
+
 
 </project>
